// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<WelcomeDialog /> > should render and match the snapshot 1`] = `
<div
  class="sc-gKckfV fwEemy"
>
  <span
    class="sc-crHjuH nCFEE"
  >
    Welcome to StreamChange
  </span>
  <div>
    <span
      class="sc-crHjuH nCFEE"
    >
      Select theme
    </span>
    <label
      for="themeLight"
    >
      <input
        checked=""
        class="sc-jrQAHW iACRCb"
        id="themeLight"
        name="theme"
        type="radio"
        value="0"
      />
      <div
        class="sc-iCfMpq bEqoKs box left"
      >
        <img
          alt="light"
          src="/src/components/WelcomeDialog/assets/light-mode.png"
        />
        <span
          class="sc-iqshrI bAcoat"
        >
          Light
        </span>
      </div>
    </label>
    <label
      for="themeDark"
    >
      <input
        class="sc-jrQAHW iACRCb"
        id="themeDark"
        name="theme"
        type="radio"
        value="1"
      />
      <div
        class="sc-iCfMpq bEqoKs box right"
      >
        <img
          alt="dark"
          src="/src/components/WelcomeDialog/assets/dark-mode.png"
        />
        <span
          class="sc-iqshrI bAcoat"
        >
          Dark
        </span>
      </div>
    </label>
  </div>
  <div>
    <span
      class="sc-crHjuH nCFEE"
    >
      Select language
    </span>
    <label
      for="pl"
    >
      <input
        class="sc-jrQAHW iACRCb"
        id="pl"
        name="language"
        type="radio"
        value="pl"
      />
      <div
        class="sc-furwwf dKHZtv box left"
      >
        <span
          class="sc-pVTZz bQqrdw"
        >
          <img
            alt="pl"
            src="/src/components/WelcomeDialog/assets/flag-pl.png"
          />
          pl
        </span>
      </div>
    </label>
    <label
      for="en"
    >
      <input
        checked=""
        class="sc-jrQAHW iACRCb"
        id="en"
        name="language"
        type="radio"
        value="en"
      />
      <div
        class="sc-furwwf dKHZtv box right"
      >
        <span
          class="sc-pVTZz bQqrdw"
        >
          <img
            alt="en"
            src="/src/components/WelcomeDialog/assets/flag-uk.png"
          />
          en
        </span>
      </div>
    </label>
  </div>
  <div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorPrimary sc-kDTkih fdEEBS css-1uent87-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span>
        Save
      </span>
    </button>
  </div>
  <div
    class="sc-eCIkhf DxTFm"
  >
    <img
      alt="cookie"
      class="sc-hKwAaq ehA-dny"
      src="/src/components/WelcomeDialog/assets/cookies.webp"
    />
    <span
      class="sc-dkPvMp exLYmO"
    >
      This site uses only necessary functional cookies. There is no tracking or personalized ads based on cookies.
    </span>
    <button
      class="sc-gsDLFA cigRla"
      type="button"
    >
      Accept
    </button>
  </div>
</div>
`;

exports[`<WelcomeDialog /> should render and match the snapshot 1`] = `
<div
  class="sc-gKclnd cagHsQ"
>
  <span
    class="sc-crHmcD tfGha"
  >
    Welcome to StreamChange
  </span>
  <div>
    <span
      class="sc-crHmcD tfGha"
    >
      Select theme
    </span>
    <label
      for="themeLight"
    >
      <input
        checked=""
        class="sc-jrQzAO fyoflt"
        id="themeLight"
        name="theme"
        type="radio"
        value="0"
      />
      <div
        class="sc-iCfMLu cFgZXk box left"
      >
        <img
          alt="light"
          src="IMAGE_MOCK"
        />
        <span
          class="sc-iqseJM kVtlPs"
        >
          Light
        </span>
      </div>
    </label>
    <label
      for="themeDark"
    >
      <input
        class="sc-jrQzAO fyoflt"
        id="themeDark"
        name="theme"
        type="radio"
        value="1"
      />
      <div
        class="sc-iCfMLu cFgZXk box right"
      >
        <img
          alt="dark"
          src="IMAGE_MOCK"
        />
        <span
          class="sc-iqseJM kVtlPs"
        >
          Dark
        </span>
      </div>
    </label>
  </div>
  <div>
    <span
      class="sc-crHmcD tfGha"
    >
      Select language
    </span>
    <label
      for="pl"
    >
      <input
        class="sc-jrQzAO fyoflt"
        id="pl"
        name="language"
        type="radio"
        value="pl"
      />
      <div
        class="sc-furwcr jwWrlj box left"
      >
        <span
          class="sc-pVTFL bwKJHy"
        >
          <img
            alt="pl"
            src="IMAGE_MOCK"
          />
          pl
        </span>
      </div>
    </label>
    <label
      for="en"
    >
      <input
        checked=""
        class="sc-jrQzAO fyoflt"
        id="en"
        name="language"
        type="radio"
        value="en"
      />
      <div
        class="sc-furwcr jwWrlj box right"
      >
        <span
          class="sc-pVTFL bwKJHy"
        >
          <img
            alt="en"
            src="IMAGE_MOCK"
          />
          en
        </span>
      </div>
    </label>
  </div>
  <div>
    <button
      class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root sc-kDTinF gATzTG css-1e6y48t-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span>
        Save
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="sc-eCImPb hlVgAE"
  >
    <img
      alt="cookie"
      class="sc-hKwDye jsDaCH"
      src="IMAGE_MOCK"
    />
    <span
      class="sc-dkPtRN FxaGp"
    >
      This site uses only necessary functional cookies. There is no tracking or personalized ads based on cookies.
    </span>
    <button
      class="sc-gsDKAQ jgVlOy"
      type="button"
    >
      Accept
    </button>
  </div>
</div>
`;
